--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "hello.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "load hello.js",
+    "start": "load hello.js"
   },
   "author": "",
   "license": "ISC"
